--- a/twig_extensions.info.yml
+++ b/twig_extensions.info.yml
@@ -1,5 +1,5 @@
 name: Twig Extensions
 type: module
-description: Twig extensions from http://twig.sensiolabs.org/doc/extensions/index.html#extensions-install
+description: Twig extensions from http://twig.sensiolabs.org/doc/extensions/index.html
 core: 8.x
 package: Twig
