Revert "Issue #2895187 by Darvanen, vijaycs85, steve.m, .jch: Twig_Error_Syntax: The text to be translated with "trans" can only contain references to simple variables in Twig_Extensions_TokenParser_Trans->checkTransString()"
This reverts commit 4356294be804d81cb143538042256c39b5d71e92.

--- a/twig_extensions.services.yml
+++ b/twig_extensions.services.yml
@@ -9,6 +9,11 @@ services:
     tags:
       - { name: twig.extension }
 
+  twig_extensions.twig.i18n:
+    class: \Twig_Extensions_Extension_I18n
+    tags:
+      - { name: twig.extension }
+
   twig_extensions.twig.text:
     class: \Twig_Extensions_Extension_Text
     tags:
