--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
   "description": "Twig Extensions",
   "keywords": ["Drupal"],
   "license": "GPL-2.0+",
-  "homepage": "http://drupal.org/project/twig_extensions",
+  "homepage": "https://www.drupal.org/project/twig_extensions",
   "minimum-stability": "dev",
   "support": {
-    "issues": "http://drupal.org/project/issues/twig_extensions",
-    "source": "http://cgit.drupalcode.org/twig_extensions"
+    "issues": "https://www.drupal.org/project/issues/twig_extensions",
+    "source": "https://git.drupalcode.org/project/twig_extensions"
   },
   "require": {
     "twig/extensions": "^1.3"
