--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "source": "https://git.drupalcode.org/project/twig_extensions"
   },
   "require": {
-    "twig/extensions": "^1.3"
+    "twig/extensions": "^1.3",
+    "drupal/core": "^8 || ^9"
   }
 }
