--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
   },
   "require": {
     "twig/extensions": "^1.3",
-    "drupal/core": "^8 || ^9"
+    "drupal/core": "^8 || ^9 || ^10"
+  },
+  "autoload": {
+    "psr-4": {
+      "Drupal\\twig_extensions\\": "src/"
+    }
   }
 }
