--- a/twig_extensions.info.yml
+++ b/twig_extensions.info.yml
@@ -2,5 +2,5 @@ name: Twig Extensions
 type: module
 description: Twig extensions from http://twig.sensiolabs.org/doc/extensions/index.html
 core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
 package: Twig
